update img footer

--- a/index.html
+++ b/index.html
@@ -807,13 +807,13 @@
                     <div class="grid__column-2_10">
                         <h3 class="footer__heading">Vào cửa hàng trên ứng dụng</h3>
                         <div class="footer__download">
-                            <img src="http://127.0.0.1:5500/assets/img/qr_code.png" alt="" class="footer__dowload__qr">
+                            <img src="./assets/img/qr_code.png" alt="" class="footer__dowload__qr">
                             <div class="footer__download__app">
                                 <a href="" class="download__app__link">
-                                    <img src="http://127.0.0.1:5500/assets/img/google_play.png" alt="" class="download__app__img">
+                                    <img src="./assets/img/google_play.png" alt="" class="download__app__img">
                                 </a>
                                 <a href="" class="download__app__link">
-                                    <img src="http://127.0.0.1:5500/assets/img/app_store.png" alt="" class="download__app__img">
+                                    <img src="./assets/img/app_store.png" alt="" class="download__app__img">
                                 </a>
                             </div>
                         </div>
